// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a shipping form 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div>
    <h2>
      Shipping Information
    </h2>
    <div>
      <label>
        Shipping Method
      </label>
      <Select
        field="shippingMethod"
        initialValue="flatrate"
        items={
          Array [
            Object {
              "label": "Flat Rate",
              "value": "flatrate",
            },
          ]
        }
      />
    </div>
  </div>
  <div>
    <button
      disabled={false}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="submit"
    >
      <span>
        Use Method
      </span>
    </button>
    <button
      disabled={false}
      onClick={[MockFunction]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        Cancel
      </span>
    </button>
  </div>
</form>
`;

exports[`renders no initial value and no shipping methods if no availableShippingMethods 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div>
    <h2>
      Shipping Information
    </h2>
    <div>
      <label>
        Shipping Method
      </label>
      <Select
        field="shippingMethod"
        initialValue=""
        items={Array []}
      />
    </div>
  </div>
  <div>
    <button
      disabled={false}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="submit"
    >
      <span>
        Use Method
      </span>
    </button>
    <button
      disabled={false}
      onClick={[MockFunction]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        Cancel
      </span>
    </button>
  </div>
</form>
`;
